--- a/mmp210/self-portrait/style.css
+++ b/mmp210/self-portrait/style.css
@@ -1,8 +1,19 @@
 html,
 body {
   margin: 0;
-  padding: 0;
 }
+
 canvas {
   display: block;
+}
+
+h1 {
+  font-size: 20vmin;
+  text-shadow: 4px 4px 2px white;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
