--- a/mmp240/ex3/style.css
+++ b/mmp240/ex3/style.css
@@ -247,6 +247,7 @@ html, body{
 
 /* Testimonials starts here */
 .testimonials{
+    margin-top: 2rem;
     padding: 6rem;
     text-align: center;
     background: hsla(42, 92%, 90%, 0.192);
