--- a/mmp240/yilin.us/styles.css
+++ b/mmp240/yilin.us/styles.css
@@ -90,7 +90,6 @@ h4 {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 10px;
-  box-sizing: border-box;
 }
 .site-nav {
   margin: 0 20px;
@@ -119,8 +118,7 @@ h4 {
   grid-column: 1/7;
 }
 .welcome-img img {
-  margin: 20px 0;
-  width: 200%;
+  width: 135%;
 }
 .contact-img {
   grid-column: 1/5;
@@ -191,8 +189,9 @@ h4 {
   text-align: center;
 }
 #contact form {
+  grid-column: 1/8;
   width: 80%;
-  max-width: 400px;
+  max-width: 375px;
   margin: 20px auto;
   text-align: center;
 }
@@ -375,7 +374,7 @@ footer img {
   .projects a * {
     max-width: 100%;
     margin: 30px 0%;
-  } 
+  }
   footer {
     background-size: 30%;
   }
