--- a/mmp240/yilin.us/styles.css
+++ b/mmp240/yilin.us/styles.css
@@ -190,8 +190,8 @@ h4 {
 }
 #contact form {
   grid-column: 1 / 8;
-  width: 80%;
-  max-width: 400px;
+  width: 85%;
+  max-width: 375x;
   margin: 20px auto;
   text-align: center;
 }
