--- a/mmp240/yilin.us/styles.css
+++ b/mmp240/yilin.us/styles.css
@@ -294,7 +294,7 @@ footer img {
   }
   .site-nav ul {
     display: flex;
-    grid-column: 6/9;
+    grid-column: 6/8;
     justify-content: flex-end;
     align-self: center;
   }
@@ -353,7 +353,7 @@ footer img {
     font-size: 20px;
   }
   .site-nav {
-    padding: 0;
+    padding: 10px;
   }
   .leading {
     margin: 20px 0;
